# ROS2-based-Color-Block-Sorting-with-Universal-Robot-UR3e-Using-TensorFlow-Transfer-Learning

./: README.md
UR3e_sort_system/: package.xml  setup.cfg  setup.py
UR3e_sort_system/UR3e_sort_system/: block_sub.py  gripper.py  r1_commander.py  r2_commander.py  test_block.py  test_r2_commander.py
mxet_ur_launch/: CMakeLists.txt  package.xml
mxet_ur_launch/config/: ex-ur3e-2_calibration.yaml  old_calibration.yaml  test_goal_publishers_config.yaml
mxet_ur_launch/launch/: ex-ur3e-1.launch.py  ex-ur3e-2.launch.py  moveit-ur3-1.launch.py  moveit-ur3-2.launch.py  test_scaled_joint_trajectory_controller.launch.py
mxet_ur_launch/python/: r1_commander.py
my_robot_msgs/: CMakeLists.txt  package.xml
my_robot_msgs/action/: UR3eMove.action
my_robot_msgs/srv/: ExecTraj.srv
pymoveit2/: CMakeLists.txt  how to connect to robot.txt  package.xml
pymoveit2/examples/: ex_pose_goal.py  pick_goal.py  robot2_main.py  test_code.py  testex_pose_goal.py
pymoveit2/pymoveit2/: __init__.py  moveit2.py
pymoveit2/pymoveit2/robots/: __init__.py  ur3e.py  ur5_sim.py
pymoveit2/textilePrograms/: detect_to_pick_dealy.py  ex_pose_goal.py  find_joint_angles.py  io_port_toggle.py  joint_goal.py  killANodes.py  main.py  orgpick_goal.py  pick_goal.py  place_cotton.py  place_mix.py  place_wool.py  robotSubscriber.py  robotTestPublisher.py  tcp_orientation.py  testPub.py  testSub.py  testTransforme.py  transforms.py
startup_commands/: ROBOT1.txt  ROBOT2.txt
